EXTRA_DIST +=	\
	cmake/add_tests.cmake	\
	cmake/external_or_find_package.cmake	\
	cmake/Modules/CheckCreds.cmake	\
	cmake/Modules/CheckIPv6.cmake	\
	cmake/Modules/CheckSockaddrStorage.cmake	\
	cmake/Modules/CheckStructMember.cmake	\
	cmake/Modules/ExternalIVYKIS.cmake	\
	cmake/Modules/ExternalJSONC.cmake	\
	cmake/Modules/Findcriterion.cmake	\
	cmake/Modules/FindCurl.cmake	\
	cmake/Modules/FindESMTP.cmake	\
	cmake/Modules/FindFLEX.cmake	\
	cmake/Modules/FindGettext.cmake	\
	cmake/Modules/FindGLIB.cmake	\
	cmake/Modules/FindGradle.cmake	\
	cmake/Modules/FindHiredis.cmake	\
	cmake/Modules/FindInotify.cmake	\
	cmake/Modules/FindIVYKIS.cmake	\
	cmake/Modules/FindJSONC.cmake	\
	cmake/Modules/FindLIBCAP.cmake	\
	cmake/Modules/FindLibDBI.cmake	\
	cmake/Modules/FindLibMaxMindDB.cmake	\
	cmake/Modules/FindLibNet.cmake	\
	cmake/Modules/FindNetSnmp.cmake	\
	cmake/Modules/FindPackageMessage.cmake	\
	cmake/Modules/FindRabbitMQ.cmake	\
	cmake/Modules/Findrdkafka.cmake	\
	cmake/Modules/FindResolv.cmake	\
	cmake/Modules/FindRiemannClient.cmake	\
	cmake/Modules/Findsystemd.cmake	\
	cmake/Modules/FindWrap.cmake	\
	cmake/Modules/GenerateYFromYm.cmake	\
	cmake/Modules/LibFindMacros.cmake	\
	cmake/module_switch.cmake		\
	cmake/openssl_functions.cmake
